--- a/index.html
+++ b/index.html
@@ -5,26 +5,25 @@
     <title>SpaceX</title>
     <link rel="stylesheet" href="reset.css"/>
     <link rel="stylesheet" href="styles.css"/>
+    <link rel="icon" type="image/x-icon" href="https://www.spacex.com/static/images/favicon.ico">
 
 </head>
 <body>
     <header class='main-header'>
-        <div class='header-left'>
-            <h3 class= "logo">SpaceX</h3>
-            <nav>
-                <span class='nav-button'>Falcon 9</span>
-                <span class='nav-button'>Falcon Heavy</span>
-                <span class='nav-button'>Dragon</span>
-                <span class='nav-button'>Starship</span>
-                <span class='nav-button'>Human Spaceflight</span>
-                <span class='nav-button'>Rideshare</span>
-            </nav>
-        </div>
-        <button class='sidebar'>|||</button>
+        <img src="spacex-logo.png" class="logo"/>
+        <nav>
+            <span class='nav-button'>Falcon 9</span>
+            <span class='nav-button'>Falcon Heavy</span>
+            <span class='nav-button'>Dragon</span>
+            <span class='nav-button'>Starship</span>
+            <span class='nav-button'>Human Spaceflight</span>
+            <span class='nav-button'>Rideshare</span>
+        </nav>
+        <button class="sidebar-button">X</button>
     </header>
     <main>
         <div class="caption">
-            <h2>Recent Launch:</h2>
+            <h3>Recent Launch:</h3>
             <h1>STARLINK MISSION</h1>
             <button>LEARN MORE</button>
         </div>
